# optris_drivers2

./: CMakeLists.txt  README  README.md  libirimager.yaml  package.xml
msg/: Flag.msg  Temperature.msg
src/: OptrisColorconvert.cpp  OptrisColorconvert.h  OptrisImager.cpp  OptrisImager.h  optris_colorconvert_node.cpp  optris_imager_node.cpp
srv/: AutoFlag.srv  Palette.srv  TemperatureRange.srv
